// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 基础 1`] = `
<div>
  <div
    class="corn-if corn-ac corn-checkbox"
    data-testid="corn-checkbox"
  >
    <input
      class="corn-checkbox-hide"
      data-testid="check"
      readonly=""
      value="false"
    />
    <div
      class="taro-img corn-img corn-checkbox-icon"
    >
      <img
        class="taro-img__mode-scaletofill"
        src="https://assets.xrkmm.cn/u/2000001252935290/dc949eed-eb8c-4ea5-bea4-c45a870cf0e7.png"
      />
    </div>
    商品链接
  </div>
</div>
`;

exports[`Checkbox 基础 按钮类型 1`] = `
<div>
  <div
    class="corn-if corn-ac corn-checkbox-btn"
    data-testid="corn-checkbox"
  >
    <input
      class="corn-checkbox-hide"
      data-testid="check"
      readonly=""
      value="false"
    />
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-default"
      type="button"
    >
      商品链接
    </button>
  </div>
</div>
`;

exports[`Checkbox 基础 按钮类型 2`] = `
<div>
  <div
    class="corn-if corn-ac corn-checkbox-btn"
    data-testid="corn-checkbox"
  >
    <input
      class="corn-checkbox-hide"
      data-testid="check"
      readonly=""
      value="true"
    />
    <button
      class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary"
      type="button"
    >
      商品链接
    </button>
  </div>
</div>
`;

exports[`Checkbox 选中 1`] = `
<div>
  <div
    class="corn-if corn-ac corn-checkbox"
    data-testid="corn-checkbox"
  >
    <input
      class="corn-checkbox-hide"
      data-testid="check"
      readonly=""
      value="true"
    />
    <div
      class="taro-img corn-img corn-checkbox-icon"
    >
      <img
        class="taro-img__mode-scaletofill"
        src="https://assets.xrkmm.cn/u/2000001252935290/97f184d7-4fda-43f1-bd56-8313ee8a2b94.png"
      />
    </div>
    商品链接
  </div>
</div>
`;
